# x-ocaml

./: .gitignore  .gitmodules  LICENSE  README.md  dune  dune-project  json_api.md  ppxlib_register.opam  x-ocaml.opam
.github/workflows/: build.yml
ppxlib_register/: dune  ppxlib_register.ml
protocol/: dune  x_protocol.ml
src/: cell.ml  cell.mli  client.ml  client.mli  dune  editor.ml  editor.mli  merlin_ext.ml  mutation_observer.ml  mutation_observer.mli  style.css  webcomponent.ml  webcomponent.mli  x_ocaml.ml
worker/: dune  eval.ml  eval.mli  ocamlfmt.ml  x_worker.ml
worker-lib/: dune  x_ocaml_json.ml  x_ocaml_lib.ml  x_ocaml_lib.mli
worker/effects/: dune  x_worker.ml
worker/no-effects/: dune  x_worker.ml
