(library
 (public_name x-ocaml.lib)
 (modules x_ocaml_lib)
 (name x_ocaml_lib)
 (libraries x-ocaml.json x-ocaml.protocol js_of_ocaml))

(library
 (public_name x-ocaml.json)
 (name x_ocaml_json)
 (modules x_ocaml_json)
 (libraries x-ocaml.protocol js_of_ocaml)
 (preprocess
  (pps ppx_deriving_yojson)))
